# entendiendo_dinamica_politica

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
config/: candidates.yaml
docs/: conteo_segidores.txt  estrategia_analisis.md  estrategias_ampliacion_red.md  estrategias_encontradas_grok.md  plan_estrategico_obtencion_informacion_tweeter.md  precios tweeter.txt  resumen_matematico_THANOS_Predictive:Model_Electoral_Campaigns.md  tweeter_handles.md  x_api_knowledge.md
notebooks/: Analisis_red_social.ipynb  modelo_thanos.ipynb  snapshot_analisis.ipynb  thanos_helpers.py
paginas/: (1) Personas que sigue Gustavo Petro (@petrogustavo) _ X.html
src/: config.py  cost_estimator.py  twitter_client.py
src/collectors/: poll_scraper.py  snapshot.py  tweet_collector.py
