[project]
name = "entendiendo-dinamica-politica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cssselect>=1.4.0",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "networkx>=3.6.1",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "xdk>=0.9.0",
]
