[project]
name = "entendiendo-dinamica-politica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cssselect>=1.4.0",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.4",
    "xdk>=0.9.0",
]
